@@ -26,6 +26,7 @@ fixed bugs:
 - fixed iteration limit determination in sepa_closecuts
 - fixed bug in prop_vbound w.r.t. creation of variables during the search
 - fixed bug using a too hard comparison on the objective-infeasible-decision in constraint enforcement
+- fixed possible cycling in enforcement of nonlinear constraints due to too early removal of newly added cuts from LP
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
